# phi

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: Benchmark.cpp  Benchmark.hpp  Benchmarks.ipynb  CMakeLists.txt  WasmtimeBenchmark.cpp  test-with-v8.cpp  test-with-wasmer.cpp  test-with-wasmtime.cpp
benchmarks/.ipynb_checkpoints/: Benchmarks-checkpoint.ipynb
benchmarks/benchmark-files/: c.wasm  c42.wasm  c42imp.wasm  count-to-mil.wasm  count-to-mil.wat  count2bil.cpp  count2bil.wasm  count2mil.cpp  count2mil.wasm  count2mil.wasm_phi.wasm  count2milO0.wasm  cpp0.wasm_phi.wasm  cpp42  cpp42.cpp  cpp42.wasm  cpp42.wasm_phi.wasm  cpp42.wat  cpp42wat.wasm  iFFT  iFFT.cpp  iFFT.wasm  iFFT.wasm_phi.wasm  iFFTO0.wasm  imp.c  imp.wasm  just42.wat  md5  md5-bench.wasm  md5.cpp  md5.wasm  md5.wasm_phi.wasm  md5O0.wasm  wasi-with-import.wasm  wasi-with-import.wat  zero.c
benchmarks/benchmark-files/epoch_interruption_wasmtime/: Cargo.toml
benchmarks/benchmark-files/epoch_interruption_wasmtime/src/: main.rs
phi_cli/: CMakeLists.txt  cli.cpp
phi_lib/: CMakeLists.txt  PhiPass.cpp  PhiPass.hpp  phi.cpp  phi.hpp  visit-instructions.def
